feat: refresh hero sections and layout

--- a/app/styles.css
+++ b/app/styles.css
@@ -30,7 +30,7 @@
 }
 
 html, body {
-  font-family: 'Roboto', system-ui, -apple-system, sans-serif;
+  font-family: 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.5;
