--- a/app/styles.css
+++ b/app/styles.css
@@ -292,13 +292,13 @@ img {
 }
 
 .footer-grid {
-  max-width: 1280px;
+  /* max-width: 1280px;
   margin: 0 auto;
   display: grid;
   gap: 40px;
   grid-template-columns: minmax(0, 2fr) minmax(0, 2fr) minmax(0, 2fr);
   position: relative;
-  z-index: 2;
+  z-index: 2; */
 }
 
 .footer-logo {
