--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -380,7 +380,7 @@ a {
 /* Hero */
 .hero-section {
   position: relative;
-  height: 100vw;
+  height: 100vh;
 }
 @media (min-width: 769px){
   .hero-section {
