--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -31,7 +31,7 @@
   /* Neutral Black C aprox */
   --gray-800: #19191a;
   --white: #ffffff;
-  --black: #333333;
+  --black: #111111;
 }
 
 /* Reset básico */
@@ -370,7 +370,7 @@ a {
 }
 
 .navbar-contact-link {
-  padding-right: calc(0.5rem * 2);
+  /* padding-right: calc(0.5rem * 2); */
 }
 
 .navbar-mobile-btn-hover {
@@ -412,7 +412,7 @@ a {
   gap: 20px;
   text-align: center;
   align-items: center;
-  color: #333333;
+  color: #111111;
 
   position: absolute;
   top: 150px;
@@ -430,12 +430,13 @@ a {
 .hero-title {
   font-family: 'Playfair Display', serif;
   font-weight: 700;
-  color: #333333;
+  color: #111111;
   line-height: 1.08;
   margin: 0;
   letter-spacing: 0.01em;
   font-style: normal;
   max-width: 820px;
+  font-size: clamp(30px, 2.500vw, 48px);
 }
 
 .hero-subtitle {
@@ -918,7 +919,7 @@ a {
   font-family: 'Playfair Display', serif;
   line-height: 1.1;
   font-weight: 600;
-  color: #333333;
+  color: #111111;
 }
 
 .hero6-body {
@@ -990,7 +991,7 @@ a {
   }
 
   .hero-title {
-    font-size: 32px;
+    /* font-size: 32px; */
   }
 
   .hero-subtitle {
@@ -1105,7 +1106,7 @@ a {
   }
 
   .hero-title {
-    font-size: 44px;
+    /* font-size: 44px; */
   }
 
 
